# torch-mlir

e2e_testing/torchscript/: basic.py  elementwise.py
examples/: sparse_op_dmatrix.py
include/torch-mlir/Dialect/Torch/IR/: GeneratedAtenOps.td  GeneratedTorchOps.td
lib/Conversion/TorchToLinalg/: TorchToLinalg.cpp
lib/Conversion/TorchToStablehlo/: Basic.cpp
lib/Conversion/TorchToTosa/: TorchToTosa.cpp
lib/Dialect/Torch/Transforms/: DecomposeComplexOps.cpp  RefineTypes.cpp  ShapeLibrary.cpp
python/: CMakeLists.txt
python/torch_mlir/dialects/torch/importer/jit_ir/build_tools/: shape_lib_gen.py  torch_ods_gen.py
python/torch_mlir/sparse_custom_op/: CMakeLists.txt  __init__.py  sparse_op.cpp
scripts/: gspmd_annotator_op.py
